# amp-client

./: Cargo.toml  README.md  test.sh
examples/: datafusion_query.rs  polars_query.rs  pool_query.rs  query.rs  rhai_runner.rs  stream_query.rs  test.rhai
src/: auth.rs  client.rs  error.rs  lib.rs  polars_ext.rs  pool.rs  retry.rs  table_provider.rs
